--- a/index.html
+++ b/index.html
@@ -7,34 +7,115 @@
     <title>UserCard</title>
   </head>
   <body>
-    <section>
-      <article class="card-container">
+    <section class="cards-container">
+      <article class="card-wrapper">
         <header class="card-header">
           <h3 class="heading">Weekly Sales</h3>
-          <img class="card-icon" src="./icons/chart-line.svg" alt="chart-icon">
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
         </header>
-       
         <p class="digit-stats">$ 15,0000</p>
         <p class="percentage-point">Increased by 60%</p>
       </article>
-      <article class="card-container">
+      <article class="card-wrapper">
         <header class="card-header">
           <h3 class="heading">Weekly orders</h3>
-          <img class="card-icon" src="./icons/chart-line.svg" alt="chart-icon">
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
         </header>
-          <p class="digit-stats">45,6334</p>
-          <p class="percentage-point">Decreased by 10%</p>
-        </article>
-      </div>
-      <article class="card-container">
+        <p class="digit-stats">45,6334</p>
+        <p class="percentage-point">Decreased by 10%</p>
+      </article>
+      <article class="card-wrapper">
         <header class="card-header">
           <h3 class="heading">Visitors Online</h3>
-          <img class="card-icon" src="./icons/chart-line.svg" alt="chart-icon">
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
         </header>
-          <p class="digit-stats">95,5741</p>
-          <p class="percentage-point">Increased by 5%</p>
-        </article>
-      </div>
+        <p class="digit-stats">95,5741</p>
+        <p class="percentage-point">Increased by 5%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Weekly Sales</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">$ 15,0000</p>
+        <p class="percentage-point">Increased by 60%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Weekly orders</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">45,6334</p>
+        <p class="percentage-point">Decreased by 10%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Visitors Online</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">95,5741</p>
+        <p class="percentage-point">Increased by 5%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Weekly Sales</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">$ 15,0000</p>
+        <p class="percentage-point">Increased by 60%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Weekly orders</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">45,6334</p>
+        <p class="percentage-point">Decreased by 10%</p>
+      </article>
+      <article class="card-wrapper">
+        <header class="card-header">
+          <h3 class="heading">Visitors Online</h3>
+          <img
+            class="card-icon"
+            src="./icons/chart-line.svg"
+            alt="chart-icon"
+          />
+        </header>
+        <p class="digit-stats">95,5741</p>
+        <p class="percentage-point">Increased by 5%</p>
+      </article>
     </section>
   </body>
 </html>
